--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
   .
  </p>
  
+ <h3>The things that I do:</h3>
+  <p> → Art Direction </p>
+  <p> → Branding / Visual Identity　</p>
+  <p> → Campaigns / Communication</p>
+  <p> → Creative Engineering </p>
+  <p> → Design System </p>
+  <p> → Experience Design </p>
+  <p> → Interaction Design </p>
+  <p> → Installations </p>
+  <p> → Naming / Copywriting </p>
+  <p> → Strategy / Design Consultancy </p>
+  <p> → Web / App development </p>
+  
+  
  <h3>About</h3>
 
  <ul>
